# pipeline-generic

./: .gitignore  README.md
.github/workflows/: README.md  cd.yml  ci-pyapp.yml  ci.yml
fronttest/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
fronttest/e2e/: app.spec.ts
fronttest/src/: App.spec.ts  App.vue
fronttest/src/assets/: main.css
fronttest/src/components/: Counter.spec.ts  Counter.vue  Welcome.spec.ts  Welcome.vue
pyapp/: README.md  pyproject.toml
pyapp/src/pyapp/: __init__.py  calculator.py  main.py
pyapp/tests/: conftest.py
pyapp/tests/functional/: test_api.py
pyapp/tests/unit/: test_calculator.py
